--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,20 @@ edition = "2024"
 rust-version = "1.90"
 
 [dependencies]
+tokio = { version = "1.48.0", features = ["rt", "macros", "net", "time", "sync", "signal"] }
+tokio-util = { version = "0.7.17", features = ["rt"] }
+axum = { version = "0.8.7", default-features = false, features = ["http1", "tokio", "form", "query"] }
+tower = "0.5.2"
+tower-http = { version = "0.6.6", features = ["timeout", "fs"] }
+maud = { version = "0.27.0", features = ["axum"] }
+serde = { version = "1.0.228", features = ["derive"] }
+sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "time", "macros", "migrate"] }
+getrandom = "0.3.4"
+time = { version = "0.3.44", features = ["formatting"] }
+thiserror = "2.0.17"
+anyhow = "1.0.100"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.20"
 
 [profile.dev]
 debug = "line-tables-only"
