--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ axum = { version = "0.8.7", default-features = false, features = ["http1", "toki
 tower = "0.5.2"
 tower-http = { version = "0.6.6", features = ["timeout", "fs"] }
 maud = { version = "0.27.0", features = ["axum"] }
+futures = "0.3.31"
 serde = { version = "1.0.228", features = ["derive"] }
 sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "time", "macros", "migrate"] }
 getrandom = "0.3.4"
@@ -18,7 +19,10 @@ time = { version = "0.3.44", features = ["formatting"] }
 thiserror = "2.0.17"
 anyhow = "1.0.100"
 tracing = "0.1.41"
-tracing-subscriber = "0.3.20"
+tracing-subscriber = { version = "0.3.20", default-features = false, features = ["std", "fmt", "ansi"] }
+log = "0.4.28"
+prometheus = { version = "0.14.0", default-features = false }
+dotenvy = "0.15.7"
 
 [profile.dev]
 debug = "line-tables-only"
