use rand for autoreload

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ maud = { version = "0.27.0", features = ["axum"] }
 futures = "0.3.31"
 serde = { version = "1.0.228", features = ["derive"] }
 sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "time", "macros", "migrate"] }
-getrandom = "0.3.4"
+rand = "0.9.2"
 time = { version = "0.3.44", features = ["formatting"] }
 thiserror = "2.0.17"
 anyhow = "1.0.100"
