root model module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ tokio = { version = "1.48.0", features = ["rt", "macros", "net", "time", "sync",
 tokio-util = { version = "0.7.17", features = ["rt"] }
 axum = { version = "0.8.7", default-features = false, features = ["http1", "tokio", "form", "query"] }
 tower = "0.5.2"
-tower-http = { version = "0.6.6", features = ["timeout", "fs"] }
+tower-http = { version = "0.6.6", features = ["fs"] }
 maud = { version = "0.27.0", features = ["axum"] }
 futures = "0.3.31"
 serde = { version = "1.0.228", features = ["derive"] }
