--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ rust-version = "1.90"
 tokio = { version = "1.48.0", features = ["rt", "macros", "net", "time", "sync", "signal"] }
 tokio-util = { version = "0.7.17", features = ["rt"] }
 axum = { version = "0.8.7", default-features = false, features = ["http1", "tokio", "form", "query"] }
+axum-extra = { version = "0.12.2", features = ["cookie"] }
 tower = "0.5.2"
 tower-http = { version = "0.6.6", features = ["fs"] }
 maud = { version = "0.27.0", features = ["axum"] }
@@ -23,6 +24,8 @@ tracing-subscriber = { version = "0.3.20", default-features = false, features = 
 log = "0.4.28"
 prometheus = { version = "0.14.0", default-features = false }
 dotenvy = "0.15.7"
+sha2 = "0.10.9"
+base64 = "0.22.1"
 
 [profile.dev]
 debug = "line-tables-only"
