--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ prometheus = { version = "0.14.0", default-features = false }
 dotenvy = "0.15.7"
 sha2 = "0.10.9"
 base64 = "0.22.1"
+url = "2.5.7"
 
 [profile.dev]
 debug = "line-tables-only"
