--- a/bacon.toml
+++ b/bacon.toml
@@ -105,6 +105,7 @@ command = [
 need_stdout = true
 allow_warnings = true
 background = false
+watch = ["public"]
 on_change_strategy = "kill_then_restart"
 # kill = ["pkill", "-TERM", "-P"]
 
