--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,8 +1,9 @@
-[build]
-rustflags = []
-
 [profile.dev]
 debug = "line-tables-only"
+
+[profile.ci]
+inherits = "dev"
+incremental = false
 
 [profile.release]
 opt-level = "z"
@@ -10,7 +11,4 @@ lto = "thin"
 codegen-units = 1
 
 [target.x86_64-unknown-linux-gnu]
-rustflags = []
-
-[target.aarch64-unknown-linux-gnu]
-rustflags = []
+rustflags = ["-C", "target_cpu=x86-64-v3"]
