--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ dotenvy = "0.15.7"
 sha2 = "0.10.9"
 base64 = "0.22.1"
 url = "2.5.7"
+toml = { version = "0.9.8", default-features = false, features = ["parse", "serde"] }
