--- a/config.example.toml
+++ b/config.example.toml
@@ -4,3 +4,11 @@ port = 5432
 user = "postgres"
 password = "postgres"
 database = "conduit"
+
+[http]
+host = "0.0.0.0"
+port = 8080
+
+[ssh]
+host = "0.0.0.0"
+port = 8022
