--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -14,4 +14,4 @@ lto = "thin"
 codegen-units = 1
 
 [target.x86_64-unknown-linux-gnu]
-rustflags = ["-C", "target_cpu=x86-64-v3"]
+rustflags = ["--cfg", "tokio_unstable", "-C", "target_cpu=x86-64-v3"]
