--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,4 +28,4 @@ sha2 = "0.10.9"
 base64 = "0.22.1"
 url = "2.5.7"
 toml = { version = "0.9.8", default-features = false, features = ["parse", "serde"] }
-libssh-rs-sys = { version = "0.2.6", features = ["vendored", "vendored-openssl"] }
+libssh-rs-sys = { git = "https://github.com/xacrimon/libssh-rs.git", rev = "f769c15", features = ["vendored"] }
