--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ axum-extra = { version = "0.12.2", features = ["cookie"] }
 tower = "0.5.2"
 tower-http = { version = "0.6.7", features = ["fs"] }
 maud = { version = "0.27.0", features = ["axum"] }
-futures = "0.3.31"
+futures-util = "0.3.31"
 serde = { version = "1.0.228", features = ["derive"] }
 sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "time", "macros", "migrate"] }
 rand = "0.9.2"
