--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ base64 = "0.22.1"
 url = "2.5.7"
 toml = { version = "0.9.8", default-features = false, features = ["parse", "serde"] }
 libssh-rs-sys = { git = "https://github.com/xacrimon/libssh-rs.git", rev = "f769c15", features = ["vendored"] }
+slab = "0.4.11"
