--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 rust-version = "1.90"
 
 [dependencies]
-tokio = { version = "=1.48.0", features = ["rt", "macros", "net", "fs", "time", "sync", "signal"] }
+tokio = { version = "=1.48.0", features = ["rt", "macros", "net", "fs", "time", "sync", "signal", "process"] }
 tokio-util = { version = "0.7.17", features = ["rt"] }
 axum = { version = "0.8.7", default-features = false, features = ["http1", "tokio", "form", "query"] }
 axum-extra = { version = "0.12.2", features = ["cookie"] }
@@ -29,3 +29,4 @@ base64 = "0.22.1"
 url = "2.5.7"
 toml = { version = "0.9.8", default-features = false, features = ["parse", "serde"] }
 libssh-rs-sys = { git = "https://github.com/xacrimon/libssh-rs.git", rev = "f769c15", features = ["vendored"] }
+regex-lite = "0.1.8"
