--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,28 +5,46 @@ edition = "2024"
 rust-version = "1.90"
 
 [dependencies]
-tokio = { version = "=1.48.0", features = ["rt", "macros", "net", "fs", "time", "sync", "signal", "process"] }
+tokio = { version = "=1.48.0", features = ["rt", "net", "fs", "time", "sync", "signal", "process"] }
 tokio-util = { version = "0.7.17", features = ["rt"] }
+
 axum = { version = "0.8.8", default-features = false, features = ["http1", "tokio", "form", "query"] }
 axum-extra = { version = "0.12.5", features = ["cookie"] }
+
 tower = "0.5.2"
 tower-http = { version = "0.6.8", features = ["fs", "catch-panic"] }
+
 maud = { version = "0.27.0", features = ["axum"] }
+
 futures-util = "0.3.31"
-serde = { version = "1.0.228", features = ["derive"] }
-sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "time", "macros", "migrate"] }
-rand = "0.8.5"
-time = { version = "0.3.44", features = ["formatting"] }
-thiserror = "2.0.17"
-anyhow = "1.0.100"
+
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", default-features = false, features = ["std", "fmt", "ansi"] }
 log = "0.4.29"
-prometheus = { version = "0.14.0", default-features = false }
-dotenvy = "0.15.7"
-sha2 = "0.10.9"
-base64 = "0.22.1"
-url = "2.5.7"
+
+serde = { version = "1.0.228", features = ["derive"] }
 toml = { version = "0.9.10", default-features = false, features = ["parse", "serde"] }
+
+base64 = "0.22.1"
+
+prometheus = { version = "0.14.0", default-features = false }
+
+sha2 = "0.10.9"
+
+dotenvy = "0.15.7"
+
+url = "2.5.7"
+
 libssh-rs-sys = { git = "https://github.com/xacrimon/libssh-rs.git", rev = "f769c15", features = ["vendored"] }
+
+sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "time", "macros", "migrate"] }
+
+rand = "0.8.5"
+
+time = { version = "0.3.44", features = ["formatting"] }
+
+thiserror = "2.0.17"
+
+anyhow = "1.0.100"
+
 regex-lite = "0.1.8"
