--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 rust-version = "1.90"
 
 [dependencies]
-tokio = { version = "=1.48.0", features = ["rt", "net", "fs", "time", "sync", "signal", "process"] }
+tokio = { version = "=1.48.0", features = ["rt", "io-util", "net", "fs", "time", "sync", "signal", "process"] }
 tokio-util = { version = "0.7.17", features = ["rt"] }
 axum = { version = "0.8.8", default-features = false, features = ["http1", "tokio", "form", "query"] }
 axum-extra = { version = "0.12.5", features = ["cookie"] }
