--- a/config.example.toml
+++ b/config.example.toml
@@ -6,6 +6,7 @@ password = "postgres"
 database = "conduit"
 
 [http]
+public_url = "http://0.0.0.0:8080"
 host = "0.0.0.0"
 port = 8080
 
@@ -16,3 +17,4 @@ host_key = "data/ssh_host_ed25519_key"
 
 [git]
 repository_path = "data/repositories"
+lfs_path = "data/lfs"
