--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ rust-version = "1.90"
 
 [dependencies]
 tokio = { version = "=1.48.0", features = ["rt", "io-util", "net", "fs", "time", "sync", "signal", "process"] }
-tokio-util = { version = "0.7.17", features = ["rt"] }
-axum = { version = "0.8.8", default-features = false, features = ["http1", "tokio", "form", "query"] }
+tokio-util = { version = "0.7.17", features = ["io", "rt"] }
+axum = { version = "0.8.8", default-features = false, features = ["http1", "tokio", "form", "query", "json"] }
 axum-extra = { version = "0.12.5", features = ["cookie"] }
 tower = "0.5.2"
 tower-http = { version = "0.6.8", features = ["fs", "catch-panic"] }
@@ -18,6 +18,7 @@ tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", default-features = false, features = ["std", "fmt", "ansi"] }
 log = "0.4.29"
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.148"
 toml = { version = "0.9.10", default-features = false, features = ["parse", "serde"] }
 futures-util = "0.3.31"
 base64 = "0.22.1"
