--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [build]
-rustflags = ["--cfg", "tokio_unstable", "-Z", "debuginfo-compression=zlib"]
+rustflags = ["--cfg", "tokio_unstable"]
 
 [profile.dev]
 debug = "line-tables-only"
